--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
+ <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Model Texture Transition And Procedural Radial Noise Using WebGL | Codrops</title>
+    <meta name="keywords" content="webgl, radial noise, texture, transition" />
+    <meta name="author" content="Mohammed Amine Bourouis for Codrops" />
+    <link rel="shortcut icon" href="/favicon.ico">
+    <script>document.documentElement.className="js";</script>
+    <script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
